--- a/Seg2105/Labs/Lab3/Lab3SimpleCalculator/app/src/main/res/layout/activity_main.xml
+++ b/Seg2105/Labs/Lab3/Lab3SimpleCalculator/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn07click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_7" />
 
             <Button
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn08click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_8" />
 
             <Button
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn09click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_9" />
 
             <Button
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnDivideclick"
+                android:onClick="onClickFunctionButton"
                 android:text="@string/button_divide" />
         </LinearLayout>
 
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn04click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_4" />
 
             <Button
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn06click"
+                android:onClick="onClickNumericalButton"
                 android:text="6" />
 
             <Button
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnMultiplyclick"
+                android:onClick="onClickFunctionButton"
                 android:text="@string/buttonX" />
         </LinearLayout>
 
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn01click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_1" />
 
             <Button
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn02click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_2" />
 
             <Button
@@ -127,7 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btn03click"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_3" />
 
             <Button
@@ -135,7 +135,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnMinusclick"
+                android:onClick="onClickFunctionButton"
                 android:text="@string/button_Minus" />
         </LinearLayout>
 
@@ -149,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnCEclick"
+                android:onClick="onClickFunctionButton"
                 android:text="CE" />
 
             <Button
@@ -165,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnDecimalclick"
+                android:onClick="onClickNumericalButton"
                 android:text="@string/button_decimal" />
 
             <Button
@@ -173,7 +173,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnPlusclick"
+                android:onClick="onClickFunctionButton"
                 android:text="@string/button_plus" />
 
         </LinearLayout>
@@ -188,7 +188,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="btnEqualsclick"
+                android:onClick="onClickFunctionButton"
                 android:text="@string/button_Equals" />
         </LinearLayout>
 
